--- a/public/modules/projects/css/style.css
+++ b/public/modules/projects/css/style.css
@@ -321,7 +321,7 @@
 
 
 /* /////////// CARD 3 IDENTIFICATION /////////// */
-.dropify-wrapper{
+#product_photo > .dropify-wrapper{
     height: 246px !important;
     border: 1px dashed #2E85EC !important;
     border-radius: 8px !important;
@@ -331,11 +331,11 @@
     color: #2E85EC !important;
 }
 
-.dropify-errors-container{
+#product_photo > .dropify-errors-container{
     font-weight: bold;
     margin-top: 32%;
 }
-.dropify-errors-container>ul{
+#product_photo > .dropify-errors-container>ul{
     list-style-type: none;
     padding: 0;
     color: #E81414;
