--- a/public/modules/reports/css/reports.css
+++ b/public/modules/reports/css/reports.css
@@ -582,6 +582,10 @@ h4.number{
         max-width: 25%;
         margin-right: 0;
     }
+    .box-items-finance.mkt .fianance-items {
+        width: calc(1/4*100% - (1 - 1/1)* 30px); 
+        max-width: 100%;
+    }
 }
 
 .finance-card { 
@@ -664,14 +668,17 @@ h4.number{
 @media only screen and (min-width: 1220px) {
     .commission { flex: 0 0 67%; }
     .distribution { flex: 0 0 30%; }
+    .commission.mkt { flex: 0 0 65.8%; }
 }
 @media only screen and (min-width: 1600px) {
+    .distribution.mkt { flex: 0 0 31.75%; }
     .commission { flex: 0 0 68%; }
 }
 
 .box-chart-primary .title-graph {
     justify-content: space-between;
     padding: 15px 0;
+    padding-top: 25px;
 }
 .box-chart-primary .title-graph.recurrence { padding-bottom: 5px; }
 
@@ -861,9 +868,7 @@ h4.number{
     position: absolute;
 }
 
-#financesChart {
-    margin-top: 17px;
-}
+#financesChart { margin-top: 28px; }
 
 .box-distribution.secondary {
     overflow: hidden;
@@ -961,4 +966,13 @@ h4.number{
     width: 100%;
     display: block;
     text-align: right;
+}
+
+.origin-sel {
+    font-size: 14px;
+    color: #6C757D;
+    width: 148px;
+    border-radius: 4px;
+    margin-top: -8px;
+    background: url('/modules/global/img/reports/ico-select.png') 123px center no-repeat !important;
 }
