standardized titles color

--- a/public/modules/melhorenvio/css/index.css
+++ b/public/modules/melhorenvio/css/index.css
@@ -20,3 +20,6 @@
 .btn-authorize:hover {
     background: #B41c1c;
 }
+
+/* Page titles */
+.page-title > a, .page-title > a > span { color: #707070 }
