--- a/public/modules/projects/css/style.css
+++ b/public/modules/projects/css/style.css
@@ -262,3 +262,6 @@
         margin-bottom: calc(10% - 10px) !important;
     }
 }
+
+/* Page titles */
+.page-title > a, .page-title > a > span { color: #707070 }
