--- a/public/modules/convertax/css/index.css
+++ b/public/modules/convertax/css/index.css
@@ -62,3 +62,6 @@ input:checked + .slider:before {
 .o-arrow-right-1::before {
     transform: rotate(180deg);
 }
+
+/* Page titles */
+.page-title > a, .page-title > a > span { color: #707070 }
