--- a/public/modules/hotbillet/css/index.css
+++ b/public/modules/hotbillet/css/index.css
@@ -64,3 +64,6 @@ input:checked + .slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+
+/* Page titles */
+.page-title > a, .page-title > a > span { color: #707070 }
