--- a/public/modules/checkouteditor/css/preview-styles.css
+++ b/public/modules/checkouteditor/css/preview-styles.css
@@ -92,6 +92,7 @@
 /* ----------- Banner Preview ----------- */
 .preview-banner {
     width: 100%;
+    background: #dbdbdb;
     -webkit-transition: all 0.1s;
     -moz-transition: all 0.1s;
     -ms-transition: all 0.1s;
@@ -100,10 +101,13 @@
 }
 
 .preview-banner.desktop {
+    height: 85px;
     max-height: 85px;
+    overflow: hidden;
 }
 
 .preview-banner.mobile {
+    height: 38px;
     max-height: 38px;
 }
 
@@ -142,7 +146,6 @@
     width: 100%;
     height: 50px;
     padding: 10px 70px 0 80px;
-
     -webkit-transition: all 0.1s;
     -moz-transition: all 0.1s;
     -ms-transition: all 0.1s;
