--- a/public/modules/projects/css/style.css
+++ b/public/modules/projects/css/style.css
@@ -327,6 +327,12 @@
     border: 1px dashed #2E85EC !important;
     border-radius: 8px !important;
 }
+.dropify-render > img{
+    width: 100%;
+    max-height: 235px !important;
+    border-radius: 8px;
+    object-fit: cover;
+}
 
 .file-icon{
     color: #2E85EC !important;
