--- a/public/modules/projects/css/style.css
+++ b/public/modules/projects/css/style.css
@@ -322,6 +322,31 @@
 
 
 /* /////////// CARD 3 IDENTIFICATION /////////// */
+.dropify-wrapper{
+    padding: 5px !important;
+}
+
+.dropify-wrapper.has-preview:hover .dropify-message{
+    z-index: 2;
+    background: rgba(255,255,255,0.7);
+    height: 100%;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+}
+
+.dropify-wrapper.has-preview:hover .dropify-message .msg{
+    display: none;
+}
+
+.dropify-wrapper .dropify-message .msg{
+    display: block;
+}
+
+.dropify-wrapper .dropify-message{
+    transition: background 0.6s ease-in-out;
+}
+
 #div-img-project .dropify-wrapper{
     height: 246px !important;
     border: 1px dashed #2E85EC !important;
@@ -346,6 +371,9 @@
     list-style-type: none;
     padding: 0;
     color: #E81414;
+}
+.dropify-infos{
+    display: none;
 }
 
 /* ///////////////////////////////// END CARD 3 */
