--- a/public/modules/projects/css/style.css
+++ b/public/modules/projects/css/style.css
@@ -466,11 +466,12 @@
 
 /* /////////////// FOOTER CARD SALVE OR CANCEL */
 .final-card{
+    height: 71px;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
 }
 .z-index{
-    z-index: 1;
+    z-index: 9;
 }
 
 #confirm-changes{
@@ -481,6 +482,7 @@
     display: none;
 }
 .success-card{
+    height: 71px;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
     background-color: #41DC8F;
