--- a/public/modules/finances/css/multi-finances.css
+++ b/public/modules/finances/css/multi-finances.css
@@ -553,7 +553,7 @@ hr{
 [id*=withdrawal-value-] {
     border-radius: 0 8px 8px 0;
 }
-[aria-expanded=true]:not(.btn) {
+.page [aria-expanded=true]:not(.btn) {
     -webkit-transition: all 0.3s;
     -o-transition: all 0.3s;
     transition: all 0.3s;
