--- a/public/modules/reports/css/reports.css
+++ b/public/modules/reports/css/reports.css
@@ -471,6 +471,7 @@ h4.number{
 @media only screen and (min-width: 1220px) {
     .col-graph { flex: 2; }
     .col-payment { font-size: 14px; }
+    .container-devices .box-image-payment { min-width: 117px; }
 }
 
 .bar {
@@ -924,7 +925,6 @@ h4.number{
 
 .header-resume { display: flex; }
 
-
 .header-resume .ico-coin{ 
     display: flex; 
     align-items: center;
@@ -994,13 +994,32 @@ h4.number{
     padding-bottom: 5px;
 }
 
-.box-conversion-state { width: 100%; }
+.box-conversion-state { 
+    width: 100%; 
+    flex-direction: column;
+}
+@media only screen and (min-width: 1227px){
+    .box-conversion-state { 
+        flex-direction: row; 
+        align-items: center;
+    }
+}
 
 .box-states, .brazil-map { flex:1; }
 
-.brazil-map { padding: 20px; }
+.brazil-map { 
+    padding: 20px; 
+    text-align: center;
+}
+
+@media only screen and (min-width: 1920px){
+    .brazil-map svg { width: 90%; }
+}
+
 
 .box-states { border-right: 1px solid #F2F2F2; }
+
+.box-states .title-graph { padding: 25px 15px; }
 
 .box-states ul { 
     padding: 0; 
@@ -1080,7 +1099,8 @@ h4.number{
     fill: #e0edfc;
     stroke: #2e85ec;
 }
-#svg-map a:hover.active path {
+#svg-map a:hover.active path,
+.state-choose path {
     fill: #2e85ec !important;
     stroke: #e0edfc; 
 }
@@ -1099,6 +1119,8 @@ h4.number{
 #svg-map a:hover.active text,
 #svg-map a:hover.active2 text { fill: #e0edfc;}
 
+.state-choose text { fill: #e0edfc !important; }
+
 /* #svg-map .circle {} */
 
 #svg-map a:hover .circle {
@@ -1111,4 +1133,54 @@ h4.number{
     stroke: #e0edfc;
     cursor: pointer;
 }
-  
+
+.header-state {
+    display: flex;
+    align-items: center;
+}
+.header-state h4 {
+    color: #636363;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+}
+.header-state strong {
+    width: 32px;
+    height: 32px;
+    background: #F5F5FA;
+    color: #636363;
+    line-height: 32px;
+    text-align: center;
+    border-radius: 8px;
+    margin: 0 10px;
+}
+.header-state .name-state { font-style: normal; }
+
+.ico-arrow-left {
+    width: 9px;
+    height: 15px;
+    background: url('/modules/global/img/reports/ico-arrow.png') no-repeat 0 50%;
+    text-indent: -9000em;
+    display: inline-block;
+}
+
+.inner-state {
+    flex-wrap: wrap;
+    padding: 30px 0;
+    padding-bottom: 0;
+}
+.inner-state .balance { 
+    margin-bottom: 40px; 
+    padding-left: 1.0715rem; 
+}
+
+.inner-state .header-resume strong { font-size: 18px; }
+
+@media only screen and (min-width: 1227px) and (max-width : 1600px){
+    .inner-state .header-resume strong { font-size: 14px; }
+}
+
+
+@media only screen and (min-width: 1920px){
+    .inner-state .header-resume strong { font-size: 18px; }
+}
