dropify save img or cancel resolved

--- a/public/modules/projects/css/style.css
+++ b/public/modules/projects/css/style.css
@@ -470,7 +470,9 @@
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
 }
-.z-index{
+.z-index-0{
+    z-index: 0;
+}.z-index{
     z-index: 9;
 }
 
