--- a/public/modules/projects/css/style.css
+++ b/public/modules/projects/css/style.css
@@ -326,7 +326,7 @@
     padding: 5px !important;
 }
 
-#project_photo.dropify-wrapper.has-preview:hover .dropify-message{
+#project_photo .dropify-wrapper.has-preview:hover .dropify-message{
     z-index: 2;
     background: rgba(255,255,255,0.7);
     height: 100%;
@@ -335,30 +335,29 @@
     justify-content: center !important;
 }
 
-#project_photo.dropify-wrapper.has-preview:hover .dropify-message .msg{
+#project_photo .dropify-wrapper.has-preview:hover .dropify-message .msg{
     display: none;
 }
 
-#project_photo.dropify-wrapper .dropify-message .msg{
+#project_photo .dropify-wrapper .dropify-message .msg{
     display: block;
 }
 
-#project_photo.dropify-wrapper .dropify-message{
+#project_photo .dropify-wrapper .dropify-message{
     transition: background 0.6s ease-in-out;
 }
 
-#project_photo.dropify-clear.o-bin-1{
+#project_photo .dropify-clear.o-bin-1{
     border-radius: 5px !important;
     border: solid 1px #2E85EC !important;
     color: #2E85EC !important;
 }
 
-#project_photo .dropify-wrapper{
+#div-img-project .dropify-wrapper{
     height: 246px !important;
     border: 1px dashed #2E85EC !important;
     border-radius: 8px !important;
 }
-
 #project_photo .dropify-render > img{
     width: 100%;
     max-height: 235px !important;
@@ -370,17 +369,15 @@
     color: #2E85EC !important;
 }
 
-#project_photo .dropify-errors-container{
+#div-img-project .dropify-errors-container{
     font-weight: bold;
     margin-top: 32%;
 }
-
-#project_photo .dropify-errors-container>ul{
+#div-img-project .dropify-errors-container>ul{
     list-style-type: none;
     padding: 0;
     color: #E81414;
 }
-
 #project_photo .dropify-infos{
     display: none;
 }
