--- a/public/modules/global/css/global.css
+++ b/public/modules/global/css/global.css
@@ -1896,6 +1896,7 @@ tbody td{
     font-weight: 700;
 }
 
+/* sirius select */
 .sirius-select-container {
     position: relative;
     width: 100%;
@@ -1941,7 +1942,7 @@ tbody td{
     width: 100%;
     max-height: 185px;
     background: #FFFFFF;
-    border: 1px solid #DEE2E6;
+    border: 1px solid #88BFFF;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1), 1px 1px 3px rgba(0, 0, 0, 0.08);
     border-radius: 8px;
     font-size: 16px;
@@ -1969,6 +1970,23 @@ tbody td{
 .sirius-select-container .sirius-select-options div:hover {
     background: #F6F7F9;
 }
+/* END sirius select */
+
+/* vertical scroll */
+
+.vertical-scroll {
+    flex-wrap: nowrap;
+    width: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
+    scrollbar-width: none;
+}
+
+.vertical-scroll::-webkit-scrollbar {
+    height: 0;
+}
+
+/* END vertical scroll */
 
 .page-project .pagination-sm .nav-btn {
     color: #3D4456;
@@ -2011,10 +2029,6 @@ tbody td{
 
 .tooltip .tooltip-inner {
     text-align: left;
-}
-
-.sirius-select-options {
-    border-color: #88BFFF !important;
 }
 
 #btn-modal-plan-delete:hover * {
