--- a/public/modules/projects/css/edit.css
+++ b/public/modules/projects/css/edit.css
@@ -14,11 +14,11 @@
 
 
 /* /////////// CARD 3 IDENTIFICATION /////////// */
-.dropify-wrapper{
+#div-img-project .dropify-wrapper{
     padding: 5px !important;
 }
 
-.dropify-wrapper.has-preview:hover .dropify-message{
+#div-img-project .dropify-wrapper.has-preview:hover .dropify-message{
     z-index: 2;
     background: rgba(255,255,255,0.7);
     height: 100%;
@@ -27,19 +27,19 @@
     justify-content: center !important;
 }
 
-.dropify-wrapper.has-preview:hover .dropify-message .msg{
+#div-img-project .dropify-wrapper.has-preview:hover .dropify-message .msg{
     display: none;
 }
 
-.dropify-wrapper .dropify-message .msg{
+#div-img-project .dropify-wrapper .dropify-message .msg{
     display: block;
 }
 
-.dropify-wrapper .dropify-message{
+#div-img-project .dropify-wrapper .dropify-message{
     transition: background 0.6s ease-in-out;
 }
 
-.dropify-clear.o-bin-1{
+#div-img-project .dropify-clear.o-bin-1{
     border-radius: 5px !important;
     border: solid 1px #2E85EC !important;
     color: #2E85EC !important;
@@ -50,7 +50,8 @@
     border: 1px dashed #2E85EC !important;
     border-radius: 8px !important;
 }
-.dropify-render > img{
+
+#div-img-project .dropify-render > img{
     width: 100%;
     max-height: 235px !important;
     border-radius: 8px;
@@ -70,7 +71,8 @@
     padding: 0;
     color: #E81414;
 }
-.dropify-infos{
+
+#div-img-project .dropify-infos{
     display: none;
 }
 
