--- a/public/modules/checkouteditor/css/style.css
+++ b/public/modules/checkouteditor/css/style.css
@@ -391,7 +391,7 @@ input[type="number"] {
     border-radius: 10px;
     font-size: 16px;
     font-weight: bold;
-    margin-right: 10px;
+    margin-left: 10px;
 
     -webkit-transition: all 0.7s;
     -moz-transition: all 0.7s;
