Fixed general issues

--- a/public/modules/checkouteditor/css/preview-styles.css
+++ b/public/modules/checkouteditor/css/preview-styles.css
@@ -186,7 +186,7 @@
     padding: 5px 20px;
 }
 
-.menu-bar-mobile .logo-mobile {
+.menu-bar-mobile .logo-mobile-div {
     display: flex;
     justify-content: center;
     align-items: center;
