new function & bahavior card

--- a/public/modules/projects/css/style.css
+++ b/public/modules/projects/css/style.css
@@ -423,6 +423,7 @@
 }
 
 
+/* /////////////// FOOTER CARD SALVE OR CANCEL */
 .z-index-0{
     z-index: 0;
 }
@@ -433,6 +434,8 @@
     z-index: 7;
 }
 
+
+/* /////////////// FOOTER CARD SAVE OR CANCEL */
 #confirm-changes{
     display: none;
 }
@@ -441,26 +444,6 @@
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
 }
-
-#data-error{
-    display: none;
-}
-.error-card{
-    height: 80px;
-    border-top-left-radius: 12px;
-    border-top-right-radius: 12px;
-}
-
-#saved-alterations{
-    display: none;
-}
-.success-card{
-    height: 80px;
-    border-top-left-radius: 12px;
-    border-top-right-radius: 12px;
-    background-color: #41DC8F;
-}
-
 .loader {
     display: none;
     border: 5px solid #2e85ec;
@@ -473,6 +456,28 @@
     height: 38px;
     margin-left: 89%;
 }
+/* /////////////// FOOTER CARD ERRORS */
+#data-error{
+    display: none;
+}
+.error-card{
+    height: 80px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+}
+
+
+/* /////////////// FOOTER CARD SALVE SUCCESS */
+#saved-alterations{
+    display: none;
+}
+.success-card{
+    height: 80px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    background-color: #41DC8F;
+}
 /* /////////////////////////// END FOOTER CARD */
+
 /* Page titles */
 .page-title > a, .page-title > a > span { color: #707070 }
