--- a/public/modules/projects/css/edit.css
+++ b/public/modules/projects/css/edit.css
@@ -76,4 +76,10 @@
     display: none;
 }
 
+.error-alert{
+    border: 1px #ff0000 solid;
+    animation: blink 1s;
+    animation-iteration-count: 3;
+}
+@keyframes blink { 50% { border-color: #fff; } }
 /* ///////////////////////////////// END CARD 3 */
