--- a/public/modules/checkouteditor/css/preview-styles.css
+++ b/public/modules/checkouteditor/css/preview-styles.css
@@ -91,13 +91,18 @@
 
 /* ----------- Banner Preview ----------- */
 .preview-banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    background: #dbdbdb;
-    -webkit-transition: all 0.1s;
-    -moz-transition: all 0.1s;
-    -ms-transition: all 0.1s;
-    -o-transition: all 0.1s;
-    transition: all 0.1s;
+    background: #f1f1f1;
+    object-fit: cover;
+    
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
 }
 
 .preview-banner.desktop {
@@ -106,13 +111,12 @@
 }
 
 .preview-banner.mobile {
-    height: 38px;
-    max-height: 38px;
+    height: 40px;
+    max-height: 40px;
 }
 
-
 .preview-banner img {
-    width: inherit;
+    height: inherit;
     background: #fff;
 }
 
@@ -121,20 +125,28 @@
     border-radius: 0;
 }
 
-.retangle-banner.desktop {
-    padding: 0 70px;
+.retangle-banner {
+    overflow-x: hidden;
+    object-fit: cover;
+    border-radius: 0 0 5px 5px;
 }
 
-.retangle-banner.desktop img {
+.retangle-banner img {
     border-radius: 0 0 5px 5px;
+}
+
+.retangle-banner.desktop {
+    width: 400px;
 }
 
 .retangle-banner.mobile {
-    padding: 0 20px;
+    width: 209px;
+    height: 65px;
+    max-height: 65px;
 }
 
-.retangle-banner.mobile img {
-    border-radius: 0 0 5px 5px;
+.logo-div.logo-menu-bar.retangle-banner {
+    padding: 0 30px;
 }
 
 /* ----------- Logo Desktop Preview ----------- */
@@ -178,15 +190,31 @@
 
 .menu-bar-mobile {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
     width: 100%;
     height: 30px;
     background-color: #fff;
     padding: 5px 20px;
 }
 
-.menu-bar-mobile .logo-mobile-div {
+
+.logo-menu-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 27px;
+    padding: 5px 20px;
+    margin-top: -29px;
+
+    -webkit-transition: all 0.7s;
+    -moz-transition: all 0.7s;
+    -ms-transition: all 0.7s;
+    -o-transition: all 0.7s;
+    transition: all 0.7s;
+}
+
+.logo-mobile-div {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -197,21 +225,38 @@
     background-color: #fff;
 }
 
+.logo-menu-bar.has-banner {
+    margin-top: -16px;
+}
+
+.purchase-menu-mobile {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 50px;
+    height: 20px;
+    background: #fff;
+    border-radius: 4px;
+    padding: 5px;
+}
+
 .preview-logo.mobile {
     max-width: 27px;
     max-height: 27px;
     object-fit: cover;
 }
 
-.menu-bar-mobile .menu-circle-mobile {
-    width: 15px;
-    height: 15px;
-    background-color: var(--primary-color);
+.menu-circle-mobile {
+    width: 10px;
+    height: 10px;
+    background-color: #494949;
     border-radius: 99px;
     margin: 0 5px;
 }
 
-.menu-bar-mobile .arrow-icon-mobile {
+.menu-bar-mobile .arrow-icon-mobile,
+.purchase-menu-mobile .arrow-icon-mobile {
     width: 10px;
 }
 
@@ -219,6 +264,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    align-self: end;
+    height: 20px;
 }
 
 /* ----------- Body Content Preview | Visual ----------- */
@@ -770,4 +817,14 @@
     width: 20px;
     height: 20px;
     margin: 0 10px 0 0;
+}
+
+@media (max-width: 1600px){
+
+    .retangle-banner.desktop {
+        width: 230px;
+    }
+    .preview-banner.desktop {
+        height: 60px;
+    }
 }
