Fixed images validation and others issues

--- a/public/modules/checkouteditor/css/preview-styles.css
+++ b/public/modules/checkouteditor/css/preview-styles.css
@@ -451,13 +451,11 @@
     background-color: var(--primary-color);
 }
 
-.step-two {
+.step-two,
+.step-three {
     background-color: #313c52;
 }
 
-.step-three {
-    background-color: #dbdbdb;
-}
 
 .steps-circle {
     min-width: 50px;
