--- a/public/modules/checkouteditor/css/preview-styles.css
+++ b/public/modules/checkouteditor/css/preview-styles.css
@@ -155,7 +155,7 @@
     display: flex;
     align-items: center;
     width: 100%;
-    height: 50px;
+    /* height: 50px; */
     padding: 10px 70px 0 80px;
     -webkit-transition: all 0.1s;
     -moz-transition: all 0.1s;
