--- a/public/modules/global/css/new-site.css
+++ b/public/modules/global/css/new-site.css
@@ -438,7 +438,11 @@ input[type=radio] {
     transition: all 0.3s;
 }
 
-.nav-link svg:hover {
+.nav-link:hover > svg {
+    filter: invert(33%) sepia(64%) saturate(1981%) hue-rotate(199deg) brightness(102%) contrast(107%);
+}
+
+.nav-link.active > svg {
     filter: invert(33%) sepia(64%) saturate(1981%) hue-rotate(199deg) brightness(102%) contrast(107%);
 }
 
