Add dinamic data to comission, pending and cashback info.

--- a/public/modules/reports/css/reports.css
+++ b/public/modules/reports/css/reports.css
@@ -386,7 +386,13 @@ h4.number{
     border-radius: 8px; 
 }
 
+#comission { height: 29px; }
 .cards-reports h6 {font-weight: 700;}
+
+.currency {
+    color: #9E9E9E;
+    font-size: 16px;
+}
 
 .value-price {
     justify-content: space-between;
